--- a/ckanext/dia_theme/less/nav.less
+++ b/ckanext/dia_theme/less/nav.less
@@ -212,5 +212,5 @@ nav .breadcrumbs {
   }
 }
 .row.wrapper {
-  padding-top: 0;
+  padding-top: 10px;
 }
